--- a/CanvasApp/App.xaml
+++ b/CanvasApp/App.xaml
@@ -1,8 +1,7 @@
 ﻿<Application x:Class="CanvasApp.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:CanvasApp"
-             StartupUri="MainWindow.xaml">
+             xmlns:local="clr-namespace:CanvasApp">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
