--- a/CanvasApp/MainWindow.xaml
+++ b/CanvasApp/MainWindow.xaml
@@ -24,6 +24,80 @@
                                           DockPanel.Dock="Top">
                 </materialDesign:ColorZone>
 
+                <StackPanel Orientation="Vertical"
+                            Background="{DynamicResource PrimaryHueDarkBrush}"
+                            DockPanel.Dock="Left"
+                            Width="150">
+                    <ListBox ItemsSource="{Binding MenuCommands}"
+                             DisplayMemberPath="Name" 
+                             Foreground="{DynamicResource PrimaryHueDarkForegroundBrush}"/>
+                </StackPanel>
+
+                <StackPanel Orientation="Vertical"
+                            Background="{DynamicResource PrimaryHueLightBrush}"
+                            DockPanel.Dock="Right"
+                            Width="200">
+                    <ListBox Style="{StaticResource MaterialDesignToolToggleListBox}">
+                        <ListBoxItem>
+                            <materialDesign:PackIcon Kind="Pencil" />
+                        </ListBoxItem>
+                        <ListBoxItem>
+                            <materialDesign:PackIcon Kind="CheckboxBlankOutline" />
+                        </ListBoxItem>
+                        <ListBoxItem>
+                            <materialDesign:PackIcon Kind="CheckboxBlankCircleOutline" />
+                        </ListBoxItem>
+                    </ListBox>
+
+                    <ComboBox HorizontalAlignment="Left" Width="150" Margin="0 32 0 0"
+                              ItemsSource="{Binding Colors}">
+                        <ComboBox.ItemsPanel>
+                            <ItemsPanelTemplate>
+                                <VirtualizingStackPanel />
+                            </ItemsPanelTemplate>
+                        </ComboBox.ItemsPanel>
+                        <ComboBox.ItemTemplate>
+                            <DataTemplate>
+                                <StackPanel Orientation="Horizontal">
+                                    <Border BorderThickness="1"
+                                            BorderBrush="Black"                                            
+                                            Width="20"
+                                            Height="16"
+                                            Margin="16 8">
+                                        <Border.Background>
+                                            <SolidColorBrush Color="{Binding Color}"/>
+                                        </Border.Background>
+                                    </Border>
+                                    <TextBlock Text="{Binding Name}"
+                                               VerticalAlignment="Center"/>
+                                </StackPanel>
+                            </DataTemplate>
+                        </ComboBox.ItemTemplate>
+                    </ComboBox>
+
+                    <ComboBox HorizontalAlignment="Left" Width="150" Margin="0 32 0 0"
+                              ItemsSource="{Binding LineWidths}">
+                        <ComboBox.ItemsPanel>
+                            <ItemsPanelTemplate>
+                                <VirtualizingStackPanel />
+                            </ItemsPanelTemplate>
+                        </ComboBox.ItemsPanel>
+                        <ComboBox.ItemTemplate>
+                            <DataTemplate>
+                                <StackPanel Orientation="Horizontal">
+                                    <Border Background="Black"
+                                            Width="20"
+                                            Height="{Binding Width}"
+                                            Margin="16 8"/>
+                                    <TextBlock Text="{Binding Name}"
+                                               VerticalAlignment="Center"/>
+                                </StackPanel>
+                            </DataTemplate>
+                        </ComboBox.ItemTemplate>
+                    </ComboBox>
+
+                </StackPanel>
+
                 <controls:CanvasControl Margin="16" Background="{DynamicResource PrimaryHueLightBrush}">
                     <Image IsHitTestVisible="False"
                            Stretch="Uniform"
